--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <h1 class="customerview__title">What our customers says about us</h1>
         <div class="customerview__description customerview__slideshow">
             <div class="customerview__mySlides customerview__fade">
-                <div><img src="assets/images/customer.png" /></div>
+                <div><img class="customerview__image" src="assets/images/customer.png" /></div>
                 <div class="customerview__numbertext">
                     <p class="customerview__detail">When my mother was diagnosed with cancer, we knew that Hospy is the
                         hospital
@@ -233,7 +233,7 @@
 
             </div>
             <div class="customerview__mySlides customerview__fade">
-                <div><img src="assets/images/customer.png" /></div>
+                <div><img class="customerview__image" src="assets/images/customer.png" /></div>
                 <div class="customerview__numbertext">
                     <p class="customerview__detail">When my mother was diagnosed with cancer, we knew that Hospy is the
                         hospital
@@ -246,7 +246,7 @@
                 </div>
             </div>
             <div class="customerview__mySlides customerview__fade">
-                <div><img src="assets/images/customer.png" /></div>
+                <div><img class="customerview__image" src="assets/images/customer.png" /></div>
                 <div class="customerview__numbertext">
                     <p class="customerview__detail">When my mother was diagnosed with cancer, we knew that Hospy is the
                         hospital
